# sigma7_teleop

./: .gitattributes  .gitignore  README.md  pyproject.toml
Sigma7/: main.cpp  teleimpedance.cbp
Sigma7/sigma7interface/: main.cpp  main.debug.cpp  main.precision.cpp  sigma7interface.pro
configs/: track_a_controllers.yaml  track_a_scenarios.yaml
configs/archive/: README.md  track_a_working_config.json
configs/controllers/: fixed_impedance.yaml
configs/scenes/: panda_peg_in_hole_torque.yaml
configs/scenes/residual_bc/: circle.yaml  circle_tuned_camera.yaml  polygon_circle_logic_v1.yaml  star_circle_logic_v1.yaml
models/scenes/: panda_peg_in_hole_torque.xml  residual_bc_circle.xml
scripts/: _setup_linux_common.sh  _sigma7_live_metrics.py  _sigma7_residual_pipeline_common.py  _sigma7_runtime.py  _sigma7_temporal_policy.py  analyze_sigma7_screening.py  build_residual_bc_6d_dataset.py  build_sigma7_residual_bc_dataset.py  collect_sigma7_residual_bc_episode.py  doctor_linux.py  live_image_window.py  live_metric_window.py  run_sigma7_mujoco_live_teleop.py  run_sigma7_pose_udp_sender.py  run_sigma7_screening_episode.py  run_sigma7_screening_episode_linux.py  run_sigma7_teleop_stack.py  setup_linux.sh  setup_linux_cpu.sh  setup_linux_gpu.sh  train_frozen_dinov3_residual_bc.py  train_frozen_dinov3_residual_bc_6d.py  train_sigma7_frozen_dinov3_residual_bc_6d.py
src/stiffness_copilot_mujoco/: __init__.py  franka_viewer.py  panda_control.py  paths.py  pose_math.py  robustness.py  rollout_observation.py  runtime_defaults.py  scenes.py  trajectory_schema.py
src/stiffness_copilot_mujoco/analysis/: track_a_labels.py
src/stiffness_copilot_mujoco/contact/: __init__.py  state.py
src/stiffness_copilot_mujoco/controllers/: __init__.py  controller_spec.py  gains.py  impedance.py  stiffness_command_smoothing.py  track_a_controllers.py  track_a_scenarios.py
src/stiffness_copilot_mujoco/episodes/: __init__.py  episode_spec.py  teleop_proxy.py
src/stiffness_copilot_mujoco/evaluation/: __init__.py  augmented_residual_bc.py  bad_case_registry.py  controller_condition_calibration.py  fixed_stiffness_baselines.py  force_metrics.py  learned_stiffness_baseline.py  paired_screening_replay.py  plots.py  residual_bc.py  residual_rrl.py  shared_protocol_adapter.py  trace_schema.py  track_a_episode_runner.py
src/stiffness_copilot_mujoco/learning/: __init__.py  augmented_residual_stiffness.py  conservative_image_augmentation.py  dataset_collection.py  dataset_schema.py  frozen_train_val_split.py  frozen_vision_backbone.py  open_loop_residual_dataset.py  privileged_task_state.py  residual_dataset.py  residual_label_projection.py  residual_rrl.py  residual_stiffness.py  residual_training.py  stiffness_labels.py  supervised_baseline.py  supervised_policy.py  task_state.py  track_a_artifact_audit.py  vision_residual_dataset.py  vision_residual_stiffness.py
src/stiffness_copilot_mujoco/sim/: ids.py  (+2 more)
tools/: run_sigma7_mujoco_live_teleop.py  sigma7_pose_udp_sender.cpp
tools/sigma7_pose_udp_sender/: CMakeLists.txt
(+18 files in other folders)
