[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sigma7-teleop"
version = "0.1.0"
description = "Sigma7 teleoperation and MuJoCo teleop pipeline prepared for Linux migration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "mujoco==3.4.0",
  "numpy>=1.26",
  "opencv-python>=4.10",
  "pyyaml>=6.0",
  "scipy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
